# Varmlen-Client-Linux

./: .gitignore  ANDROID.md  README.md  WINDOWS-PORT.md  aegisvpn.desktop  package-lock.json  package.json  vite.config.js
.github/workflows/: windows.yml
helper/: Cargo.toml  aegisvpn-helper.service  install.sh  uninstall.sh  varmlen-setcap.sh
helper/src/: main.rs
scripts/: android-native.sh
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  core.rs  lib.rs  mobile_vpn.rs  ping.rs  singbox.rs  split.rs  split_bypass.rs  storage.rs  subscription.rs  tray.rs  vpn.rs  win_vpn.rs  xray.rs
src/lib/: api.ts  conn.svelte.ts  core.svelte.ts  i18n.svelte.ts  nav.ts  platform.ts  popup.ts  settings.svelte.ts  split.svelte.ts  subs.svelte.ts  theme.svelte.ts
src/lib/components/: Dropdown.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/routes/split/: +page.svelte
tools/leakcheck/: Cargo.toml
tools/leakcheck/src/: main.rs
